--- a/ChristmasAdoptionEvent.html
+++ b/ChristmasAdoptionEvent.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-<h1>Book Sale</h1>
+<h1>Christmas Adoption Event</h1>
 <nav>
 <ul>
 <li><a href="index.html">Home page</a></li>
