--- a/ChristmasAdoptionEvent.html
+++ b/ChristmasAdoptionEvent.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <htmL>
 <head>
+  <div class="container"
+    <div id="message">Welcome to my page!
+     <button onclick="document.body.classlist.toggle('dark-mode');">Toggle dark mode</button>
+     <button onclick="document.getElemntById('message').classList.add('dismissed')">Dismiss</button></div>
+
 <title>My"Christmas Adoption Event"</title>
 <link rel="stylesheet" href="styles.css">
 </head>
