--- a/ChristmasAdoptionEvent.html
+++ b/ChristmasAdoptionEvent.html
@@ -52,16 +52,16 @@ Adopting an animal from the shelter has many benefits for not only you but also 
    Let's say you are going to adopt an animal from a shelter.
 
 </p>
+<h2>Reasons to adopt</h2>
 
-<p>
-1) You go through with the adoption process
-2) You have a healthy animal
-3) You saved yours and other animals lives
-4) You did not support puppy mill, You buy an animal from a pet store/ other seller
-5) You support the inhumane practice of pet stores/mills
-6) Animals in shelters are euthanized because of overcrowding and you do not carry the guilt
-7) Your animal lives a better live instead of living in poor conditions that lead to health conditions
-</p>
+<ul style="list-style-type:disc;"</h2>
+<li> ⚫ You go through with the adoption process</li>
+<li> ⚫You saved yours and other animals lives</li>
+<li> ⚫ You did not support puppy mill, You buy an animal from a pet store/ other seller</li>
+<li> ⚫You support the inhumane practice of pet stores/mills</li>
+<li> ⚫Animals in shelters are euthanized because of overcrowding and you do not carry the guilt</li>
+<li> ⚫Your animal lives a better live instead of living in poor conditions that lead to health conditions</li>
+</ul>
 <img src="https://tinykittens.com/uploads/cases/aura2.jpg" />
 
   Adopting from a shelter is not hard at all , these are the steps:
