--- a/ChristmasAdoptionEvent.html
+++ b/ChristmasAdoptionEvent.html
@@ -36,7 +36,22 @@ Don't Shop, Adopt!
 Adopting an animal from the shelter has many benefits for not only you but also for animals.
 
 
-</p>
+<p>
+  <h2>Adopting from a shelter is not hard at all , these are the steps:
+
+    <li>1. Find a humane society or other shelter in your area</li>
+    <li>2. Pick what animal you want</li>
+    <li>3. Visit or look online for the available pets at the shelter</li>
+    <li>4. Pcik the pet of your choice</li>
+    <li>5. Complete adoption paperwork and pay fees</li>
+    <li>6. Take your pet and spend every christmas together!</li>
+    </ul>
+  </h2>
+Follow these steps and you can get your desired animal.
+<ul style="list-style-type:disc;"</h2>
+
+
+
 <img src="https://getwallpapers.com/wallpaper/full/2/2/2/759447-download-pug-puppies-wallpaper-1920x1080.jpg" />
 
 <p>
@@ -50,33 +65,21 @@ Adopting an animal from the shelter has many benefits for not only you but also 
   Adopting not shopping is greatly advertised on this flyer ,I want you and everyone else to use this alternative option instead of buying from pet stores and mills.
   Think of this scenarion when in doubt of adopting
    Let's say you are going to adopt an animal from a shelter.
-
 </p>
-<h2>Reasons to adopt</h2>
+<h2>More reasons to adopt
+  <ul style="list-style-type:disc;"</h2>
+  <li> You go through with the adoption process</li>
+  <li> You saved yours and other animals lives</li>
+  <li> You did not support puppy mill, You buy an animal from a pet store/ other seller</li>
+  <li> You support the inhumane practice of pet stores/mills</li>
+  <li> Animals in shelters are euthanized because of overcrowding and you do not carry the guilt</li>
+  <li> Your animal lives a better live instead of living in poor conditions that lead to health conditions</li>
+  </ul>
 
-<ul style="list-style-type:disc;"</h2>
-<li> ⚫ You go through with the adoption process</li>
-<li> ⚫You saved yours and other animals lives</li>
-<li> ⚫ You did not support puppy mill, You buy an animal from a pet store/ other seller</li>
-<li> ⚫You support the inhumane practice of pet stores/mills</li>
-<li> ⚫Animals in shelters are euthanized because of overcrowding and you do not carry the guilt</li>
-<li> ⚫Your animal lives a better live instead of living in poor conditions that lead to health conditions</li>
-</ul>
+</h2>
+
 <img src="https://tinykittens.com/uploads/cases/aura2.jpg" />
 
-  Adopting from a shelter is not hard at all , these are the steps:
-  	 Follow these steps and you can get your desired animal.
-
-<p>
-1. Find a humane society or other shelter in your area
-2. Pick what animal you want
-3. Visit or look online for the available pets at the shelter
-4. Meet the pet
-5. Complete adoption paperwork and pay fees
-6. Take your pet and spend every christmas together!
-</p>
-
-
-    </article>
+  </article>
   </body>
 </html>
